--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,10 +26,12 @@ const products = await getCollection('products')
 						const { title, img, price, description} = data
 
 						return(
-							<article class="flex flex-col md:flex-row">
-								<a href={`/productos/${slug}`} class="mb-2 xl:mb-0 transition hover:scale-110">
-									<img transition:name={`img-${slug}`} class="object-cover mr-8 w-44 h-44 rounded" src={`${img}`} alt={title} />
-								</a>
+							<article class="flex flex-col md:flex-row text-center md:text-left mb-10 md:mb-0">
+								<div class="center transition hover:scale-110">
+									<a href={`/productos/${slug}`} class="mb-2 xl:mb-0">
+										<img transition:name={`img-${slug}`} class="object-cover mb-3 md:mr-8 w-44 h-44 rounded" src={`${img}`} alt={title} />
+									</a>
+								</div>
 
 								<div class="flex flex-col justify-center">
 									<h2 class="mb-2 text-xl font-bold leading-tight text-sky-300">
