--- a/src/pages/productos/[id].astro
+++ b/src/pages/productos/[id].astro
@@ -22,17 +22,20 @@ const { Content } = await render(product)
 <Layout title={`${title}`}>
     <div class="grid grid-flow-row md:grid-flow-col gap-12">
         <aside class="flex flex-col items-center gap-4">
-            <a href="/" class="hover:underline opacity-70">← Volver</a>
+            <a href="/" class="hover:underline opacity-70 text-yellow-200">← Volver</a>
             <Gallery />
             <!-- <img transition:name={`img-${slug}`} src={`/${img}`} alt={title} class="rounded w-96 h-auto" /> -->
         </aside>
         <main class="max-w-full">
-            <h1 class="text-4xl font-bold mb-4 text-sky-200">
+            <h1 class="text-2xl md:text-4xl font-bold mb-4 text-sky-200">
                 {title}
             </h1>
             <div class="mt-4 prose prose-invert leading-relaxed">
                 <span class="text-3xl text-yellow-200 font-medium">u$s {price}</span>
                 <Content />
+            </div>
+            <div class="justify-center text-center mt-7">
+                <a href="/" class="hover:underline opacity-70 text-yellow-200">← Volver</a>
             </div>
         </main>
 
