More visual fixes

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -2,16 +2,16 @@
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
   <div>
-    <img class="object-cover h-64 md:h-96 max-w-full rounded-lg" src="/apple-watch-7/apple-watch-7.jpg" alt="">
+    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/apple-watch-7/apple-watch-7.jpg" alt="">
   </div>
   <div>
-    <img class="object-cover h-64 md:h-96 max-w-full rounded-lg" src="/iphone-15-pro-max/iphone-15-pro-max.jpg" alt="">
+    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/iphone-15-pro-max/iphone-15-pro-max.jpg" alt="">
   </div>
   <div>
-    <img class="object-cover h-64 md:h-96 max-w-full rounded-lg" src="/iphone-xr/iphone-xr.webp" alt="">
+    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/iphone-xr/iphone-xr.webp" alt="">
   </div>
   <div>
-    <img class="object-cover h-64 md:h-96 max-w-full rounded-lg" src="/macbook-2023/macbook.jpeg" alt="">
+    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/macbook-2023/macbook.jpeg" alt="">
   </div>
 </div>
 
