--- a/src/pages/productos/[id].astro
+++ b/src/pages/productos/[id].astro
@@ -30,7 +30,7 @@ const { Content } = await render(product)
             <h1 class="text-2xl md:text-4xl font-bold mb-4 text-sky-200">
                 {title}
             </h1>
-            <div class="mt-4 prose prose-invert leading-relaxed">
+            <div class="mt-4 prose prose-invert leading-normal text-pretty">
                 <span class="text-3xl text-yellow-200 font-medium">u$s {price}</span>
                 <Content />
             </div>
