Make some visual changes, fix gallery

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,41 +1,34 @@
+---
+import type { InferEntrySchema } from 'astro:content';
+import { getCollection } from 'astro:content';
 
+const products = await getCollection('products') 
 
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-  <div>
-    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/apple-watch-7/apple-watch-7.jpg" alt="">
-  </div>
-  <div>
-    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/iphone-15-pro-max/iphone-15-pro-max.jpg" alt="">
-  </div>
-  <div>
-    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/iphone-xr/iphone-xr.webp" alt="">
-  </div>
-  <div>
-    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/macbook-2023/macbook.jpeg" alt="">
-  </div>
-</div>
+interface Props {
+	id: string
+}
 
-
-
-
-<!-- ---
-import 'photoswipe/style.css';
+const { id } = Astro.props;
 ---
 
-<div class="pswp-gallery pswp-gallery--single-column" id="gallery">
-  <a href="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-2500.jpg" data-pswp-width="1669" data-pswp-height="2500" target="_blank">
-    <img src="https://cdn.photoswipe.com/photoswipe-demo-images/photos/2/img-200.jpg" alt="">
-  </a>
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+  {
+    products.map((product) => {
+      const { slug, data } = product
+      const { img } = data
+
+      if (product.id == id){
+        return(
+          img.map((image) =>
+            <div>
+              <img class="object-cover md:h-96 max-w-full rounded-lg" src={`${image}`} alt="" />
+            </div>
+          )
+        )
+      }
+    })
+  }
+  <!-- <div>
+    <img class="object-cover md:h-96 max-w-full rounded-lg" src="/apple-watch-7/apple-watch-7.jpg" alt="">
+  </div> -->
 </div>
-
-
-<script>
-    import PhotoSwipeLightbox from 'photoswipe/lightbox';
-
-    const lightbox = new PhotoSwipeLightbox({
-        gallery: '#gallery',
-        children: 'a',
-        pswpModule: () => import('photoswipe')
-    });
-    lightbox.init();
-</script> -->
