--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const products = await getCollection('products')
 	<main>
 		<div class="flex justify-center gap-3">
 			<img src="/favicon.png" alt="" class="invisible md:visible w-14 h-14">
-			<h1 class="text-center text-4xl font-extrabold pb-16">
+			<h1 class="text-center text-5xl md:text-6xl font-bold md:font-semibold text-transparent bg-clip-text pb-16 bg-gradient-to-r to-emerald-600 from-sky-400">
 				Productos Disponibles 
 			</h1>
 			<img src="/favicon.png" alt="" class="invisible md:visible w-14 h-14">
@@ -29,7 +29,7 @@ const products = await getCollection('products')
 							<article class="flex flex-col md:flex-row text-center md:text-left mb-10 md:mb-0">
 								<div class="center transition hover:scale-110">
 									<a href={`/productos/${slug}`} class="mb-2 xl:mb-0">
-										<img transition:name={`img-${slug}`} class="object-cover mb-3 md:mr-8 md:w-44 md:h-44 rounded" src={`${img}`} alt={title} />
+										<img transition:name={`img-${slug}`} class="object-cover mb-3 md:mr-8 md:w-44 md:h-44 rounded" src={`${img[0]}`} alt={title} />
 									</a>
 								</div>
 
@@ -42,7 +42,7 @@ const products = await getCollection('products')
 										{/* <a href="" class="transition hover:scale-125 opacity-70  hover:opacity-100 hover:-rotate-6">
 											<WPLogo />
 										</a> */}
-										<span class="text-3xl text-yellow-200">u$s {price}</span>
+										<span class="bg-green-100 text-green-800 text-3xl px-2 py-1 rounded-xl dark:bg-gray-800 dark:text-green-300 border border-green-400">u$s {price}</span>
 									</div>
 								</div>
 							</article>
