--- a/src/pages/productos/[id].astro
+++ b/src/pages/productos/[id].astro
@@ -22,21 +22,27 @@ const { Content } = await render(product)
 <Layout title={`${title}`}>
     <div class="grid grid-flow-row md:grid-flow-col gap-12">
         <aside class="flex flex-col items-center gap-4">
-            <a href="/" class="hover:underline opacity-70 text-yellow-200">← Volver</a>
-            <Gallery />
+            <Gallery id={`${product.id}`}/>
             <!-- <img transition:name={`img-${slug}`} src={`/${img}`} alt={title} class="rounded w-96 h-auto" /> -->
         </aside>
-        <main class="max-w-full">
-            <h1 class="text-2xl md:text-4xl font-bold mb-4 text-sky-200">
+        <main class="max-w-full items-center">
+            <h1 class="text-2xl md:text-4xl font-bold mb-6 text-sky-200">
                 {title}
             </h1>
             <div class="mt-4 prose prose-invert leading-normal text-pretty">
-                <span class="text-3xl text-yellow-200 font-medium">u$s {price}</span>
+                <span class="bg-green-100 text-green-800 text-3xl px-2 py-1 rounded-xl dark:bg-gray-800 dark:text-green-300 border border-green-400">
+                    u$s {price}
+                </span>
                 <Content />
             </div>
-            <div class="justify-center text-center mt-7">
-                <a href="/" class="hover:underline opacity-70 text-yellow-200">← Volver</a>
+            <div class="relative inline-flex items-center mt-7 text-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+                <a href="/" class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-lg group-hover:bg-opacity-0">
+                    ← Volver
+                </a>
             </div>
+            <!-- <div class="justify-center text-center mt-7">
+                <a href="/" class="hover:underline opacity-70 text-yellow-200">← Volver</a>
+            </div> -->
         </main>
 
     </div>
