Add link to oficial site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const products = await getCollection('products')
 									<h2 class="mb-2 text-xl font-bold leading-tight text-sky-300">
 										<a href={`/productos/${slug}`} class="hover:underline">{title}</a>
 									</h2>
-									<p class="text-sm mb-4 text-gray-300 max-w-sm">{description}</p>
+									<p class="text-sm mb-4 text-gray-300 max-w-sm text-pretty">{description}</p>
 									<div class="flex justify-center md:justify-end font-semibold md:font-normal p-3">
 										{/* <a href="" class="transition hover:scale-125 opacity-70  hover:opacity-100 hover:-rotate-6">
 											<WPLogo />
