--- a/src/pages/productos/[id].astro
+++ b/src/pages/productos/[id].astro
@@ -2,6 +2,7 @@
 import { getCollection, render } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import Gallery from "../../components/Gallery.astro";
+import HelpIcon from "../../components/HelpIcon.astro";
 
 export async function getStaticPaths () {
     const products = await getCollection("products");
@@ -14,7 +15,8 @@ export async function getStaticPaths () {
 
 const { product } = Astro.props
 const { data, slug } = product
-const { title, img, price} = data
+const { title, img, price, url} = data
+console.log(url)
 
 const { Content } = await render(product)
 ---
@@ -30,9 +32,16 @@ const { Content } = await render(product)
                 {title}
             </h1>
             <div class="mt-4 prose prose-invert leading-normal text-pretty">
-                <span class="bg-green-100 text-green-800 text-3xl px-2 py-1 rounded-xl dark:bg-gray-800 dark:text-green-300 border border-green-400">
-                    u$s {price}
-                </span>
+                <div class="flex justify-between">
+                    <span class="bg-green-100 text-green-800 text-3xl px-2 py-1 rounded-xl dark:bg-gray-800 dark:text-green-300 border border-green-400">
+                        u$s {price}
+                    </span>
+                </div>
+                <div class="relative inline-flex items-center mt-7 text-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
+                    <a href={`${url}`} target="_blank" rel="noopener noreferrer" class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-lg group-hover:bg-opacity-0 no-underline">
+                        Link web oficial
+                    </a>
+                </div>
                 <Content />
             </div>
             <div class="relative inline-flex items-center mt-7 text-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800">
